Tweaks and structure improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ nav:
   - Getting Started: index.md
   - Running CodeSee on the Backend: backend.md
   - Updating to the latest version: updating.md
+  - Extra options: options.md
 theme:
   name: material
 
