--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: CodeSee Beta
 nav:
   - Getting Started: index.md
+  - Running CodeSee locally: local.md
   - Running CodeSee on the Backend: backend.md
   - Updating to the latest version: updating.md
   - Extra options: options.md
