--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ nav:
   - Getting Started: index.md
   - Running CodeSee locally: local.md
   - Running CodeSee on the Backend: backend.md
-  - Updating to the latest version: updating.md
+  - Upgrading to CodeSee Hosted: updating.md
   - Extra options: options.md
 theme:
   name: material
