--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,23 @@
 site_name: CodeSee Beta
 nav:
-  - Getting Started: index.md
+  - Overview: index.md
+  - Installing CodeSee: installation.md
+  - → Create React App: setup-cra.md
+  - → Typescript without Babel: setup-typescript-without-babel.md
+  - → Nuxt: setup-nuxt.md
+  - → Storybook: setup-storybook.md
+  - → Gatsby: setup-gatsby.md
+  - → Ember: setup-ember.md
+  - → Generic setup: setup-generic.md
   - Running CodeSee locally: local.md
   - Running CodeSee on the Backend: backend.md
   - Upgrading to CodeSee Hosted: updating.md
   - Extra options: options.md
 theme:
   name: material
-
+extra:
+  social:
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/codeseeio
+copyright: Copyright &copy; 2021 CodeSee Inc
+  
