--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,8 @@ markdown_extensions:
   - pymdownx.tabbed
   - pymdownx.superfences
   - attr_list
+extra_css:
+  - stylesheets/extra.css
 extra:
   social:
     - icon: fontawesome/brands/twitter
