More updates, incl to the use cases

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,23 +15,12 @@ nav:
   - 🚀 Using CodeSee:
     - Quick start guide: quick-start.md
     - Ways to use CodeSee: use-cases.md
-  # - Using CodeSee:
-  #   - Quick start guide: extra.md
-  #   - Feature A: extra.md
-  #   - Feature B: extra.md
-  #   - Use cases: extra.md
-  - 🚀 Using CodeSee:
-    - Quick start guide: quick-start.md
-    - Ways to use CodeSee: use-cases.md
   - ⚙️ Advanced setup:
+    - Updating pre-0.7.0 to the latest: upgrade-local-version.md
     - Running CodeSee locally: local.md
     - Running CodeSee on the Backend: backend.md
     - Changing from local to hosted CodeSee: hosted.md
   - 🙏 Troubleshooting: troubleshooting.md
-  - ⚡ Upgrading versions:
-    - Local: upgrade-local-version.md
-  # - Troubleshooting:
-  #   - Help with installing CodeSee: extra.md
 theme:
   name: material
   favicon: img/favicon-32x32.png
