--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - 🚀 Using CodeSee:
     - Quick start guide: quick-start.md
     - Ways to use CodeSee: use-cases.md
+    - Using Data Flows: data-flows.md
   - ⚙️ Advanced setup:
     - Running CodeSee locally: local.md
     - Upgrading local to the latest: upgrade-local-version.md
