--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ theme:
   features:
     - navigation.tabs
 markdown_extensions:
+  - pymdownx.highlight
   - pymdownx.tabbed
   - pymdownx.superfences
   - attr_list
