--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,9 +34,11 @@ theme:
   features:
     - navigation.tabs
 markdown_extensions:
+  - pymdownx.highlight
   - pymdownx.tabbed
   - pymdownx.superfences
   - attr_list
+  - admonition
 extra_css:
   - stylesheets/extra.css
 extra:
