--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
 site_name: CodeSee Beta
 nav:
   - 👋 Welcome:
-    - Introduction: index.md
+    - Introduction: home.md
     - Troubleshooting: troubleshooting.md
   - 🛠 CodeSee installation:
-    - Overview: install/index.md
+    - Overview: install/overview.md
     - Create React App: install/setup-cra.md
     - Typescript without Babel: install/setup-typescript-without-babel.md
     - Next: install/setup-next.md
@@ -15,7 +15,7 @@ nav:
     - Generic setup: install/setup-generic.md
     - Upgrading your installation: install/upgrade-hosted-version.md
   - ⚙️ CodeSee Local:
-    - Introducing CodeSee Local: local/index.md
+    - Introducing CodeSee Local: local/introduction.md
     - Running CodeSee locally: local/local.md
     - Upgrading local: local/upgrade-local-version.md
     - Running CodeSee on the backend: local/backend.md
