--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
     - Contact us: help/contact.md    
 theme:
   name: material
-  logo: img/CS_avatar_square_2_color.png
+  logo: img/CS-icon-for-docs.png
   favicon: img/favicon-32x32.png
   custom_dir: overrides
   features:
